@@ -2,6 +2,11 @@
   Jackdmp changes log
 ---------------------------
 
+
+2006-11-29 Stephane Letz  <letz@grame.fr>
+
+	* Correct JackWinEnvent::Allocate (handle the ERROR_ALREADY_EXISTS case). Correct JackEngine::ClientExternalNew.
+
 2006-11-22 Stephane Letz  <letz@grame.fr>
 
 	* In synchronous mode, if the driver time out is reached, the server may get desynchronized (pending signal may arrive in later cycles), 
